htrc-torchlite-efapi/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torchlite-efapi-prod-service
spec:
  selector:
    app: torchlite-efapi-prod-app
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
